--- a/morice_eMorbius/Wpf-Morbius/View/Pages/UserAdd.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/UserAdd.xaml
@@ -7,21 +7,27 @@
       d:DesignHeight="300" d:DesignWidth="300"
 	Title="user_add">
 
+    <Page.Resources>
+        <ResourceDictionary Source="/Assets/MasterStyle.xaml"/>
+    </Page.Resources>
+
     <Grid>
-        <Label Content="Ajout d'un utilisateur" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <Label Content="Nom :" HorizontalAlignment="Left" Margin="10,53,0,0" VerticalAlignment="Top"/>
-        <Label Content="Prenom :" HorizontalAlignment="Left" Margin="10,81,0,0" VerticalAlignment="Top"/>
-        <Label Content="Login :" HorizontalAlignment="Left" Margin="10,109,0,0" VerticalAlignment="Top"/>
-        <Label Content="Mot de passe :" HorizontalAlignment="Left" Margin="10,137,0,0" VerticalAlignment="Top"/>
-        <Label Content="Role :" HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top"/>
-        <Label Content="Photo :" HorizontalAlignment="Left" Margin="10,193,0,0" VerticalAlignment="Top"/>
-        <TextBox Height="23" Margin="113,50,10,0" TextWrapping="Wrap" Text="{Binding Name, Mode=TwoWay}" VerticalAlignment="Top"/>
-        <TextBox Height="23" Margin="113,78,10,0" TextWrapping="Wrap" Text="{Binding Firstname, Mode=TwoWay}" VerticalAlignment="Top"/>
-        <TextBox Height="23" Margin="113,106,10,0" TextWrapping="Wrap" Text="{Binding Login, Mode=TwoWay}" VerticalAlignment="Top"/>
-        <PasswordBox Name="Password" Margin="113,134,10,0" VerticalAlignment="Top" Height="23"/>
-        <TextBox Height="23" Margin="113,162,10,0" TextWrapping="Wrap" Text="{Binding Role, Mode=TwoWay}" VerticalAlignment="Top"/>
-        <Label Height="23" Margin="113,190,10,0" Content="{Binding SelectedPath}" VerticalAlignment="Top" HorizontalAlignment="Left"/>
-        <Button Content="Ajouter" Command="{Binding OpenCommand}" Margin="113,190,10,0" HorizontalAlignment="Right" Width="121" Height="26" VerticalAlignment="Top" />
+        <Label Content="Ajout d'un utilisateur" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBlock Text="{Binding Error}"  Style="{StaticResource Error}" Margin="20,20,0,0"/>
+        <TextBlock Text="{Binding Success}"  Style="{StaticResource Success}" Margin="20,20,0,0" />
+        <Label Content="Nom :" HorizontalAlignment="Left" Margin="10,67,0,0" VerticalAlignment="Top"/>
+        <Label Content="Prenom :" HorizontalAlignment="Left" Margin="10,95,0,0" VerticalAlignment="Top"/>
+        <Label Content="Login :" HorizontalAlignment="Left" Margin="10,123,0,0" VerticalAlignment="Top"/>
+        <Label Content="Mot de passe :" HorizontalAlignment="Left" Margin="10,151,0,0" VerticalAlignment="Top"/>
+        <Label Content="Role :" HorizontalAlignment="Left" Margin="10,179,0,0" VerticalAlignment="Top"/>
+        <Label Content="Photo :" HorizontalAlignment="Left" Margin="10,207,0,0" VerticalAlignment="Top"/>
+        <TextBox Height="23" Margin="113,64,10,0" TextWrapping="Wrap" Text="{Binding Name, Mode=TwoWay}" VerticalAlignment="Top"/>
+        <TextBox Height="23" Margin="113,92,10,0" TextWrapping="Wrap" Text="{Binding Firstname, Mode=TwoWay}" VerticalAlignment="Top"/>
+        <TextBox Height="23" Margin="113,120,10,0" TextWrapping="Wrap" Text="{Binding Login, Mode=TwoWay}" VerticalAlignment="Top"/>
+        <PasswordBox Name="Password" Margin="113,148,10,0" VerticalAlignment="Top" Height="23"/>
+        <TextBox Height="23" Margin="113,176,10,0" TextWrapping="Wrap" Text="{Binding Role, Mode=TwoWay}" VerticalAlignment="Top"/>
+        <Label Height="23" Margin="113,204,10,0" Content="{Binding SelectedPath}" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+        <Button Content="Ajouter" Command="{Binding OpenCommand}" Margin="0,204,10,0" HorizontalAlignment="Right" Width="121" Height="26" VerticalAlignment="Top" />
 
 
         <Button Content="Ajouter" Command="{Binding AddUserCommand}" CommandParameter="{Binding ElementName=Password}" Margin="0,0,10,10" HorizontalAlignment="Right" Width="121" Height="26" VerticalAlignment="Bottom" />
