--- a/morice_eMorbius/Wpf-Morbius/View/Pages/PatientAdd.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/PatientAdd.xaml
@@ -6,9 +6,11 @@
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
 	Title="patient_add">
-
+    <Page.Resources>
+        <ResourceDictionary Source="/Assets/MasterStyle.xaml"/>
+    </Page.Resources>
     <Grid>
-        <Label Content="Ajout d'un patient" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+        <TextBlock Text="Ajout d'un patient" Style="{StaticResource Title}"/>
         <Label Content="Nom :" HorizontalAlignment="Left" Margin="10,53,0,0" VerticalAlignment="Top"/>
         <Label Content="Prenom :" HorizontalAlignment="Left" Margin="10,81,0,0" VerticalAlignment="Top"/>
         <Label Content="Date de naissance :" HorizontalAlignment="Left" Margin="10,109,0,0" VerticalAlignment="Top"/>
