--- a/morice_eMorbius/Wpf-Morbius/View/Pages/PatientObs.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/PatientObs.xaml
@@ -70,7 +70,7 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
-        <Button Content="Ajouter un commentaire" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="198"/>
+        <Button Content="Ajouter un commentaire" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="198" Command="{Binding AddCommand}"/>
 
     </Grid>
 </UserControl>
