--- a/morice_eMorbius/Wpf-Morbius/View/Pages/nouser.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/nouser.xaml
@@ -5,12 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>
+        <ResourceDictionary Source="/Assets/MasterStyle.xaml"/>
+    </UserControl.Resources>
     <Grid>
-        <ScrollViewer>
-            <StackPanel >
-                <TextBlock Text="Bienvenue sur MORBIUS" />
-                <TextBlock Text="Choisissez un utilisateur dans la liste ci-contre." />
-            </StackPanel>
-        </ScrollViewer>
+        <StackPanel >
+            <TextBlock Text="Bienvenue sur MORBIUS" Style="{StaticResource Title}" />
+            <TextBlock Text="Choisissez un utilisateur dans la liste ci-contre pour commencer. Le profil d'un utilisateur vous donnera accès à toutes les informations dont vous avez besoin sur celui-ci." TextWrapping="Wrap" TextAlignment="Justify"/>
+        </StackPanel>
     </Grid>
 </UserControl>
