--- a/morice_eMorbius/Wpf-Morbius/View/MasterView.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/MasterView.xaml
@@ -4,20 +4,8 @@
         xmlns:mui="http://firstfloorsoftware.com/ModernUI"
         Title="Morbius" IsTitleVisible="True"
         ContentSource="/View/Pages/PatientList.xaml"
-        MinWidth="600" MinHeight="450">
+        MinWidth="600" MinHeight="450"
+        MenuLinkGroups="{Binding Menu}">
     
-    <mui:ModernWindow.MenuLinkGroups>
-        <mui:LinkGroup DisplayName="Patients" >
-            <mui:LinkGroup.Links>
-                <mui:Link DisplayName="Consulter" Source="/View/Pages/PatientList.xaml" />
-                <mui:Link DisplayName="Ajouter" Source="/View/Pages/PatientAdd.xaml" />
-            </mui:LinkGroup.Links>
-        </mui:LinkGroup>
-        <mui:LinkGroup DisplayName="Utilisateurs" >
-            <mui:LinkGroup.Links>
-                <mui:Link DisplayName="Consulter" Source="/View/Pages/UserList.xaml" />
-                <mui:Link DisplayName="Ajouter" Source="/View/Pages/UserAdd.xaml" />
-            </mui:LinkGroup.Links>
-        </mui:LinkGroup>
-    </mui:ModernWindow.MenuLinkGroups>
+    
 </mui:ModernWindow>
