--- a/morice_eMorbius/Wpf-Morbius/View/Pages/patient.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/patient.xaml
@@ -45,7 +45,7 @@
                 <mui:Link DisplayName="Temp." Source="View/Pages/PatientTemp.xaml" />
             </mui:ModernTab.Links>
         </mui:ModernTab>
-        <Button Content="Supprimer le patient" Command="{Binding DeletePatientCommand}" Margin="0,0,10,4" Grid.ColumnSpan="2" HorizontalAlignment="Right" Width="158" Height="26" VerticalAlignment="Bottom"/>
+        <Button Content="Supprimer le patient" Visibility="{Binding Path=CurrentUser, Converter={StaticResource userConverter}}" Command="{Binding DeletePatientCommand}" Margin="0,0,10,4" Grid.ColumnSpan="2" HorizontalAlignment="Right" Width="158" Height="26" VerticalAlignment="Bottom"/>
 
 
     </Grid>
