--- a/morice_eMorbius/Wpf-Morbius/View/Pages/user.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/user.xaml
@@ -49,7 +49,7 @@
 
         <Ellipse x:Name="ellipse1"  Width="10" Height="10" Stroke="Black" Fill="{Binding Path=Connected, Converter={StaticResource colorConverter}}" Margin="127,131,163,159" VerticalAlignment="Top" HorizontalAlignment="Left" />
         <TextBlock Text="{Binding Path=Connected, Converter={StaticResource stringConverter}}" HorizontalAlignment="Left" Margin="151,128,0,0" VerticalAlignment="Top"/>
-        <Button Content="Supprimer cet utilisateur" Command="{Binding DeleteUserCommand}" Margin="0,0,10,10" HorizontalAlignment="Right" Width="204" Height="26" VerticalAlignment="Bottom"/>
+        <Button Content="Supprimer cet utilisateur" Command="{Binding DeleteUserCommand}" Margin="0,0,10,10" HorizontalAlignment="Right" Width="204" Height="26" VerticalAlignment="Bottom" Visibility="{Binding Path=CurrentUser, Converter={StaticResource userConverter}}"/>
 
         <TextBlock Text="{Binding Error}" Margin="25,196,25,41" Height="63" Width="250" Style="{StaticResource Error}"></TextBlock>
     </Grid>
