--- a/morice_eMorbius/Wpf-Morbius/View/PatientObsAdd.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/PatientObsAdd.xaml
@@ -5,25 +5,27 @@
         xmlns:app="clr-namespace:Wpf_Morbius"
         Title="NouveauCommentaire"
         ResizeMode="NoResize"
-        Height="400" Width="500" 
+        Height="512.849" Width="500" 
         Style="{StaticResource EmptyWindow}" >
 
     <Window.Resources>
-        <ResourceDictionary Source="/Assets/LoginStyle.xaml"/>
+        <ResourceDictionary Source="/Assets/AddObservationStyle.xaml"/>
     </Window.Resources>
     <Grid>
         <TextBlock Text="Ajouter un commentaire" Style="{StaticResource Title}" HorizontalAlignment="Stretch" Margin="10,10,10,0" VerticalAlignment="Top" TextWrapping="Wrap"/>
         <Label Content="Commentaire :" HorizontalAlignment="Left" Margin="10,68,0,0" VerticalAlignment="Top"/>
-        <Label Content="Prescriptions (une par ligne) :" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top"/>
-        <Label Content="Images :" HorizontalAlignment="Left" Margin="10,216,0,0" VerticalAlignment="Top"/>
-        <Label Content="Poids :" HorizontalAlignment="Left" Margin="10,246,0,0" VerticalAlignment="Top"/>
-        <Label Content="Pression :" HorizontalAlignment="Left" Margin="277,246,0,0" VerticalAlignment="Top"/>
-        <TextBox Height="40" Margin="30,89,10,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" AcceptsReturn="True"/>
-        <TextBox Height="40" Margin="30,155,10,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" AcceptsReturn="True"/>
-        <Label Height="23" Margin="68,216,0,0" VerticalAlignment="Top" Content="{Binding SelectedPath}" HorizontalAlignment="Left"/>
-        <Button Content="Ajouter" Command="{Binding OpenCommand}" Margin="0,212,10,0" HorizontalAlignment="Right" Width="121" Height="26" VerticalAlignment="Top" />
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="68,243,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="353,243,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Ajouter" Margin="0,0,10,10" Height="26" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="144"/>
+        <Label Content="Prescriptions (une par ligne) :" HorizontalAlignment="Left" Margin="10,196,0,0" VerticalAlignment="Top"/>
+        <Label Content="Images :" HorizontalAlignment="Left" Margin="10,324,0,0" VerticalAlignment="Top"/>
+        <Label Content="Poids :" HorizontalAlignment="Left" Margin="10,354,0,0" VerticalAlignment="Top"/>
+        <Label Content="Pression :" HorizontalAlignment="Left" Margin="277,354,0,0" VerticalAlignment="Top"/>
+        
+        <TextBox Height="102" Margin="30,89,10,0" TextWrapping="Wrap" Text="{Binding Comment, Mode=TwoWay}"  VerticalAlignment="Top" AcceptsReturn="True"/>
+        <TextBox Height="93" Margin="30,217,10,0" TextWrapping="Wrap" Text="{Binding Prescription, Mode=TwoWay}" VerticalAlignment="Top" AcceptsReturn="True"/>
+        <Label Height="23" Margin="68,320,0,0" VerticalAlignment="Top" Content="{Binding SelectedPathsText}" HorizontalAlignment="Left"/>
+        <Button Content="Ajouter" Command="{Binding OpenCommand}" Margin="0,320,10,0" HorizontalAlignment="Right" Width="121" Height="26" VerticalAlignment="Top" />
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="68,351,0,0" TextWrapping="Wrap" Text="{Binding Weight}" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="353,351,0,0" TextWrapping="Wrap" Text="{Binding BloodPressure}" VerticalAlignment="Top" Width="120"/>
+        
+        <Button Content="Ajouter" Command="{Binding AddObservationCommand}"  Margin="0,0,10,10" Height="26" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="144"/>
     </Grid>
 </mui:ModernWindow>
