Fixed some errors into add observation form.

--- a/morice_eMorbius/Wpf-Morbius/View/Pages/PatientObs.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/PatientObs.xaml
@@ -11,7 +11,7 @@
     </UserControl.Resources>
     <Grid >
         <ScrollViewer Margin="10,0,10,41">
-            <ItemsControl ItemsSource="{Binding Obs}" >
+            <ItemsControl ItemsSource="{Binding Observations}" >
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <Grid>
