--- a/morice_eMorbius/Wpf-Morbius/View/Pages/PatientDetails.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/PatientDetails.xaml
@@ -2,7 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+             xmlns:DV="clr-namespace:System.Windows.Controls.DataVisualization;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+             xmlns:DVC="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
@@ -18,12 +21,40 @@
 
             <!-- Afficher la courbe de poids à la place du rectangle -->
             <TextBlock Text="Courbe de poids :" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Style="{StaticResource Info}"/>
-            <Rectangle Fill="AliceBlue" Height="150" Margin="10,31,10,0" VerticalAlignment="Top"/>
-
+            
+            <chartingToolkit:Chart Canvas.Top="80" Canvas.Left="10" Name="WeightChart" Margin="10,31,10,0" VerticalAlignment="Top" Height="150" Width="242"
+           Background="AliceBlue">
+                <chartingToolkit:Chart.LegendStyle>
+                    <Style TargetType="DV:Legend">
+                        <Setter Property="Width" Value="0" />
+                    </Style>
+                </chartingToolkit:Chart.LegendStyle>
+                <DVC:Chart.Series>
+                    <DVC:LineSeries ItemsSource="{Binding WeightData}"
+    		IndependentValueBinding="{Binding Path=Key}"
+    		DependentValueBinding="{Binding Path=Value}">
+                    </DVC:LineSeries>
+                </DVC:Chart.Series>
+            </chartingToolkit:Chart>
+                
             <!-- Courbe de tension -->
             <TextBlock Text="Courbe de tension :" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1" Style="{StaticResource Info}"/>
-            <Rectangle Fill="AliceBlue" Height="150" Margin="10,31,10,0" VerticalAlignment="Top" Grid.Column="1"/>
 
+            <chartingToolkit:Chart Canvas.Top="80" Canvas.Left="10" Name="TensionChart" Grid.Column="1" Margin="10,31,10,0" VerticalAlignment="Top" Height="150" Width="242"
+           Background="AliceBlue">
+                <chartingToolkit:Chart.LegendStyle>
+                    <Style TargetType="DV:Legend">
+                        <Setter Property="Width" Value="0" />
+                    </Style>
+                </chartingToolkit:Chart.LegendStyle>
+                <DVC:Chart.Series>
+                    <DVC:LineSeries ItemsSource="{Binding TensionData}"
+    		IndependentValueBinding="{Binding Path=Key}"
+    		DependentValueBinding="{Binding Path=Value}">
+                    </DVC:LineSeries>
+                </DVC:Chart.Series>
+            </chartingToolkit:Chart>
+            
             <TextBlock Text="Dernier commentaire : " HorizontalAlignment="Left" Margin="10,191,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Style="{StaticResource Info}"/>
             <TextBlock Background="AliceBlue" Margin="10,212,10,10" TextWrapping="Wrap" Text="{Binding LastObservation}" Grid.ColumnSpan="2" Style="{StaticResource Content}"/>
 
